codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__trust_directory__tests__existing_untrusted_task.snap
---
source: tui/src/onboarding/trust_directory.rs
expression: terminal.backend()
---
> 当前目录：/workspace/project

  此现有任务可能保留之前在受信任状态下加载的设置和历史记录，包括项目配
  置或钩子。如需使用受限设置，请启动新任务。文件夹的信任设置不会更改。

› 1. 打开现有任务                                                     
  2. 返回代理指挥中心

  按 enter 继续；esc 返回
