codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__trust_directory__tests__renders_snapshot_for_remote_git_subdirectory.snap
---
source: tui/src/onboarding/trust_directory.rs
expression: "terminal.backend().to_string().lines().map(str::trim_end).collect::<Vec<_>>().join(\"\\n\")"
---
> 当前目录：/srv/remote/project/nested

  注意：当前位于 Git
  项目的子目录中。信任设置将应用于仓库根目录：/srv/remote/project

  是否信任此文件夹？在权限设置允许的范围内，Codex
  可以读取、编辑和运行这里的文件。文件夹设置可以自动运行代码，即使模型
  没有发出请求。仅当你信任这些文件时才继续。你的信任决定将被保存。

› 1. 信任并继续
  2. 返回代理指挥中心

  按 enter 继续；esc 返回
